- fix header and footer z-index

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,6 +7,8 @@
     position: fixed;
     bottom: 0;
     color: $primary-color;
+    background-color: $background-color;
+    z-index: $max-z-index;
 
     .container {
         @include center-horizontal;
